<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Invaders</string>
    <string name="action_settings">Settings</string>
    <string name="new_game_menu_button">Play Game</string>
    <string name="high_scores_menu_botton">High Scores</string>
    <string name="help_menu_button">Help</string>
    <string name="quit_menu_button">Quit</string>
    <string name="image_menu_descriptor">Space Invaders Enemy</string>
    <string name="title_activity_help">Help</string>
    <string name="welcome_help">Welcome to Space Invaders!</string>
    <string name="text_help">The goal of the game is to kill as many Space Invaders as you can.
        \n\nYou can fire and move with the on-screen buttons.
        \n\nEach Space Invader you kill will increase your score.
        \n\nBe careful, the more that die, the faster they move!
        \n\nGood luck.</string>
    <string name="title_activity_high_scores">High Scores</string>
    <string name="title_activity_game">Game</string>
    <string name="left_button_game">Left</string>
    <string name="fire_button_game">Fire</string>
    <string name="right_button_game">Right</string>
    <string name="level_label_game">Level:</string>
    <string name="score_label_game">Score:</string>
    <string name="title_activity_game_over">Game Over</string>
    <string name="submit_game_over">Submit</string>
    <string name="cancel_game_over">Cancel</string>
    <string name="enter_name_game_over">Enter your name</string>

</resources>
