<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
	    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    tools:context=".MainMenuActivity" >
	
		<ImageView
	  	    android:id="@+id/invaderView"
	   	    android:layout_width="@dimen/menu_image_size"
	  	    android:layout_height="@dimen/menu_image_size"
	  	    android:layout_gravity="center"
	  	    android:scaleType="fitCenter"
	  	    android:src="@drawable/enemy1a"
	  	    android:contentDescription="@string/image_menu_descriptor" 
	    />
	
	   	<Button
	   	    android:id="@+id/startButton"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="@dimen/menu_button_height"
	   	    android:layout_marginTop="@dimen/menu_button_margin_first"
	   	    android:gravity="left|center_vertical"
	   	    android:text="@string/new_game_menu_button" 
	   	    android:onClick="onClickPlayGame"
	    />
	
	   	<Button
	   	    android:id="@+id/helpButton"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="@dimen/menu_button_height"
	   	    android:layout_marginTop="@dimen/menu_button_margin"
	   	    android:gravity="left|center_vertical"
	   	    android:text="@string/help_menu_button" 
	   	    android:onClick="onClickHelp"
	    />
	   	       	
	    <Button
	   	    android:id="@+id/highScoresButton"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="@dimen/menu_button_height"
	   	    android:layout_marginTop="@dimen/menu_button_margin"
	   	    android:gravity="left|center_vertical"
	   	    android:text="@string/high_scores_menu_botton" 
	   	    android:onClick="onClickHighScores"
	    />
	    
	    <Button
	   	    android:id="@+id/exitButton"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="@dimen/menu_button_height"
	   	    android:layout_marginTop="@dimen/menu_button_margin"
	   	    android:gravity="left|center_vertical"
	   	    android:text="@string/quit_menu_button" 
	   	    android:onClick="onClickExit"
	    />
	    
	</LinearLayout>
</ScrollView>