<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
    tools:context=".GameOverActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".50"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_activity_game_over" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".50"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".50"
            android:gravity="center"
            android:text="@string/level_label_game"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
       	<TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".50"
            android:gravity="center"
            android:text="@string/score_label_game"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>

    <com.cst.spaceinvaders.game.views.HighScoreView
        android:id="@+id/highScoreView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".20" 
        android:fadeScrollbars="false"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".50"
        android:ems="10"
        android:hint="@string/enter_name_game_over"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".50"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
         	android:onClick="onSubmit"
            android:text="@string/submit_game_over" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
         	android:onClick="onCancel"
            android:text="@string/cancel_game_over" />
        
    </LinearLayout>
</LinearLayout>
